# Tarea2_EDA

./: CMakeLists.txt  data.html
include/lLists/: node.hpp  stack.hpp
src/: node.cpp  stack.cpp
tests/: main.cpp
